third_party/move/move-compiler-v2/tests/checking/typing/constant_non_base_type.exp

Diagnostics:
error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_non_base_type.move:3:22
  │
3 │     const C1: &u64 = &0;
  │                      ^^
  │                      │
  │                      Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/checking/typing/constant_non_base_type.move:3:22
  │
3 │     const C1: &u64 = &0;
  │     -----------------^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: expected `&mut u64` but found a value of type `&u64` (mutability mismatch)
  ┌─ tests/checking/typing/constant_non_base_type.move:4:26
  │
4 │     const C2: &mut u64 = &0;
  │                          ^^

error: Not a valid constant expression.
  ┌─ tests/checking/typing/constant_non_base_type.move:4:26
  │
4 │     const C2: &mut u64 = &0;
  │                          ^^
  │                          │
  │                          Invalid call or operation in constant

error: Invalid type for constant
  ┌─ tests/checking/typing/constant_non_base_type.move:4:26
  │
4 │     const C2: &mut u64 = &0;
  │     ---------------------^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: Invalid type for constant
  ┌─ tests/checking/typing/constant_non_base_type.move:5:20
  │
5 │     const C3: () = ();
  │     ---------------^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.

error: Invalid type for constant
  ┌─ tests/checking/typing/constant_non_base_type.move:6:33
  │
6 │     const C4: (address, bool) = (@0x0, false);
  │     ----------------------------^^^^^^^^^^^^^-
  │     │
  │     Expected one of `u8`, `u16, `u32`, `u64`, `u128`, `u256`, `i64`, `i128`, `bool`, `address`, or `vector<_>` with valid element type.
